# CrusherChess

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CrusherChess/: CrusherChess.sln  test.cpp
CrusherChess/CrusherChess/: ConsoleColours.cpp  CrusherChess.cpp  CrusherChess.h  CrusherChess.vcxproj  CrusherChess.vcxproj.filters  Search.cpp
CrusherChess/CrusherChess/LinuxBuild/: CrusherChess.cpp
CrusherChess/CrusherChess/Release/: CrusherChess.exe.recipe  CrusherChess.iobj  CrusherChess.ipdb
CrusherChess/CrusherChess/Release/CrusherChess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CrusherChess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CrusherChess/CrusherChess/x64/Debug/: CodeAnalysisResultManifest.txt  CrusherChess.exe.recipe  CrusherChess.ilk  CrusherChess.nativecodeanalysis.sarif  vc143.idb
CrusherChess/CrusherChess/x64/Debug/CrusherChess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CrusherChess.lastbuildstate  CrusherChess.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CrusherChess/CrusherChess/x64/Release/: CrusherChess.exe.recipe  CrusherChess.iobj  CrusherChess.ipdb
CrusherChess/CrusherChess/x64/Release/CrusherChess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CrusherChess.lastbuildstate  CrusherChess.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CrusherChess/src/: CrusherChess.cpp  Debug.cpp  Debug.h  bitoperations.cpp  bitoperations.h  evaluation.cpp  evaluation.h  hash.h  magics.cpp  magics.h  movegen.cpp  movegen.h  moves.h  perft.cpp  perft.h  platform_defs.h  random.h  search.cpp  search.h  simpleSearch.cpp  simpleSearch.h  transposition.cpp  transposition.h  typedefs.h  types.cpp  types.h  uci.cpp  uci.h  zobristKeys.cpp  zobristKeys.h  zobristkeys.cpp
CrusherChess/tests/: test.cpp
